--- a/Server/WCFServer/LocationWCF/MainWindow.xaml
+++ b/Server/WCFServer/LocationWCF/MainWindow.xaml
@@ -28,6 +28,9 @@
             <MenuItem Header="测试指令">
                 <MenuItem Header="区域统计" Name="MenuCmd1" Click="MenuCmd1_OnClick"></MenuItem>
             </MenuItem>
+            <MenuItem Header="设置">
+                <MenuItem Header="标签角色" Name="MenuCardRole" Click="MenuCardRole_Click"></MenuItem>
+            </MenuItem>
         </Menu>
         <!--<Button DockPanel.Dock="Top" Name="BtnOpenSimulator" Content="打开定位模拟器" Click="BtnOpenSimulator_OnClick"></Button>
         <Button DockPanel.Dock="Top" Name="BtnConnectEngine" Content="连接定位引擎" Click="BtnConnectEngine_Click"></Button>-->
