--- a/Server/WebSite/LocationWeb/Views/Shared/_Layout.cshtml
+++ b/Server/WebSite/LocationWeb/Views/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
                             <li>@Html.ActionLink("实时位置", "Index", "LocationCardPosition")</li>
                             <li>@Html.ActionLink("历史轨迹", "Index", "Positions")</li>
                             <li>@Html.ActionLink("定位告警", "Index", "Alarms")</li>
+                            <li>@Html.ActionLink("定位图片", "Index", "Images")</li>
                         </ul>
                     </li>
                     <li>
