--- a/Server/WCFServer/LocationWCF/Windows/CardRoleWindow.xaml
+++ b/Server/WCFServer/LocationWCF/Windows/CardRoleWindow.xaml
@@ -10,6 +10,9 @@
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="File"></MenuItem>
         </Menu>
+        <StackPanel DockPanel.Dock="Bottom" Name="ToolBar1" Visibility="Collapsed">
+            <Button Name="BtnOk" Click="BtnOk_OnClick">确定</Button>
+        </StackPanel>
         <DataGrid Name="DataGrid1">
             <DataGrid.ContextMenu>
                 <ContextMenu>
