--- a/Server/WCFServer/LocationWCF/Windows/TagWindow.xaml
+++ b/Server/WCFServer/LocationWCF/Windows/TagWindow.xaml
@@ -6,7 +6,16 @@
         xmlns:local="clr-namespace:LocationServer.Windows"
         mc:Ignorable="d"
         Title="TagWindow" Height="400" Width="600" WindowStartupLocation="CenterScreen" Loaded="Window_Loaded">
-    <Grid>
-        <DataGrid Name="DataGrid1"></DataGrid>
-    </Grid>
+    <DockPanel>
+        <DataGrid Name="DataGrid1">
+            <DataGrid.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Header="设置">
+                        <MenuItem Header="角色" Name="MenuSetRole" Click="MenuSetRole_OnClick"></MenuItem>
+                        <MenuItem Header="人员" Name="MenuSetPerson" Click="MenuSetPerson_OnClick"></MenuItem>
+                    </MenuItem>
+                </ContextMenu>
+            </DataGrid.ContextMenu>
+        </DataGrid>
+    </DockPanel>
 </Window>
