--- a/Server/WCFServer/LocationWCF/Windows/DbConfigureWindow.xaml
+++ b/Server/WCFServer/LocationWCF/Windows/DbConfigureWindow.xaml
@@ -9,6 +9,7 @@
     <DockPanel>
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="数据库初始化">
+                <MenuItem Header="删除SqlServer" Name="MenuDeleteSqlServer" Click="MenuDeleteSqlServer_Click"></MenuItem>
                 <MenuItem Header="SqlServer" Name="MenuInitMSSql" Click="MenuInitMSSql_Click"></MenuItem>
                 <MenuItem Header="Sqlite" Name="MenuInitSqlite" Click="MenuInitSqlite_Click"></MenuItem>
             </MenuItem>
