--- a/Server/WebSite/LocationWeb/Views/LocationCard/Details.cshtml
+++ b/Server/WebSite/LocationWeb/Views/LocationCard/Details.cshtml
@@ -41,6 +41,37 @@
                     @Html.DisplayFor(model => model.Describe)
                 </dd>
 
+                <dt>
+                    @Html.DisplayNameFor(model => model.CardRoleId)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.CardRoleId)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Power)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Power)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.PowerState)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.PowerState)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Flag)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Flag)
+                </dd>
             </dl>
         </div>
         <p>
