--- a/Server/WebSite/LocationWeb/Views/LocationCard/Position.cshtml
+++ b/Server/WebSite/LocationWeb/Views/LocationCard/Position.cshtml
@@ -11,6 +11,9 @@
     @Html.ActionLink("返回到定位卡页面", "Index")
 </div>
 
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
 <script src="~/Scripts/echarts.js"></script>
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 
