--- a/Server/WCFServer/LocationWCF/Windows/Simple/ArchorWindow.xaml
+++ b/Server/WCFServer/LocationWCF/Windows/Simple/ArchorWindow.xaml
@@ -1,14 +1,14 @@
-﻿<Window x:Class="LocationServer.ArchorListWindow"
+﻿<Window x:Class="LocationServer.Windows.Simple.ArchorWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:LocationServer"
+        xmlns:local="clr-namespace:LocationServer.Windows.Simple"
         mc:Ignorable="d"
-        Title="ArchorListWindow" Height="400" Width="600"  WindowStartupLocation="CenterScreen" Loaded="ArchorListWindow_OnLoaded">
+        Title="ArchorWindow" Height="400" Width="600"  WindowStartupLocation="CenterScreen" Loaded="Window_Loaded">
     <Grid>
         <DataGrid Name="DataGrid1">
-            
+
         </DataGrid>
     </Grid>
 </Window>
